@@ -299,28 +299,32 @@ public class GTPlaceholders {
                 return new MultiLineComponent(args.get(i + 1)).setIgnoreSpaces(true);
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("redstone") {
 
-            @Override
-            public MultiLineComponent apply(PlaceholderContext ctx,
-                                            List<MultiLineComponent> args) throws PlaceholderException {
-                PlaceholderUtils.checkArgs(args, 2, true);
-                if (GTStringUtils.equals(args.getFirst(), "get")) {
-                    Direction direction = Direction.byName(GTStringUtils.componentsToString(args.get(1)));
-                    if (direction == null)
-                        throw new InvalidArgsException();
-                    return MultiLineComponent.literal(ctx.level()
-                            .getSignal(ctx.pos().relative(direction), direction));
-                } else if (GTStringUtils.equals(args.get(0), "set")) {
-                    int power = PlaceholderUtils.toInt(args.get(1));
-                    PlaceholderUtils.checkRange("redstone power", 0, 15, power);
-                    if (ctx.cover() == null) throw new NotSupportedException();
-                    ctx.cover().setRedstoneSignalOutput(power);
-                    return MultiLineComponent.empty();
+        if (!GTCEu.Mods.isCreateLoaded() || !ConfigHolder.INSTANCE.compat.createCompat) {
+            PlaceholderHandler.addPlaceholder(new Placeholder("redstone") {
+
+                @Override
+                public MultiLineComponent apply(PlaceholderContext ctx,
+                                                List<MultiLineComponent> args) throws PlaceholderException {
+                    PlaceholderUtils.checkArgs(args, 2, true);
+                    if (GTStringUtils.equals(args.getFirst(), "get")) {
+                        Direction direction = Direction.byName(GTStringUtils.componentsToString(args.get(1)));
+                        if (direction == null)
+                            throw new InvalidArgsException();
+                        return MultiLineComponent.literal(ctx.level()
+                                .getSignal(ctx.pos().relative(direction), direction));
+                    } else if (GTStringUtils.equals(args.get(0), "set")) {
+                        int power = PlaceholderUtils.toInt(args.get(1));
+                        PlaceholderUtils.checkRange("redstone power", 0, 15, power);
+                        if (ctx.cover() == null) throw new NotSupportedException();
+                        ctx.cover().setRedstoneSignalOutput(power);
+                        return MultiLineComponent.empty();
+                    }
+                    throw new InvalidArgsException();
                 }
-                throw new InvalidArgsException();
-            }
-        });
+            });
+
+        }
         PlaceholderHandler.addPlaceholder(new Placeholder("previousText") {
 
             @Override
